ユーザー一覧画面の作成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'com.google.dagger.hilt.android'
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
 android {
     namespace 'io.github.obaya884.randomuser'
     compileSdk 33
@@ -79,12 +83,21 @@ dependencies {
     /**
      * Presentation Layer
      */
+    // Fragment
     def fragment_version = '1.5.4'
     implementation("androidx.fragment:fragment:$fragment_version")
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
 
+    // Lifecycle
+    def lifecycle_version = '2.5.1'
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
-
+    // Epoxy
+    def epoxy_version = '5.1.1'
+    implementation "com.airbnb.android:epoxy:$epoxy_version"
+    implementation "com.airbnb.android:epoxy-databinding:$epoxy_version"
+    kapt "com.airbnb.android:epoxy-processor:$epoxy_version"
 }
 
 // Allow references to generated code
